Fixed Links and Spacing

--- a/src/index.css
+++ b/src/index.css
@@ -231,8 +231,6 @@ body {
 }
 
 .about-col {
-	display: block;
-	margin: auto;
 	margin-top: 2rem;
 }
 
